--- a/src/app/main-page/you-can-section/you-can-section.component.html
+++ b/src/app/main-page/you-can-section/you-can-section.component.html
@@ -14,25 +14,42 @@
         <li class="split-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
       </ul>
       <div class="split-view__image-side">
-        <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide split-view__image"><img class="image"
+<!--        <div class="swiper-container">-->
+<!--                    <div class="swiper-wrapper">-->
+<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
+<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
+<!--                                                                       alt=""></div>-->
+<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
+<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"-->
+<!--                                                                       alt=""></div>-->
+<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
+<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
+<!--                                                                       alt=""></div>-->
+<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
+<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"-->
+<!--                                                                       alt=""></div>-->
+<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
+<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
+<!--                                                                       alt=""></div>-->
+<!--                    </div>-->
+<!--        </div>-->
+          <div class="custom-slider">
+            <div class="custom-slider__slide split-view__image"><img class="image"
                                                              src="../../assets/images/images-by-nastya/sec-3-man.svg"
                                                              alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image"
+            <div class="custom-slider__slide split-view__image"><img class="image"
                                                              src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"
                                                              alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image"
+            <div class="custom-slider__slide split-view__image"><img class="image"
                                                              src="../../assets/images/images-by-nastya/sec-3-man.svg"
                                                              alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image"
+            <div class="custom-slider__slide split-view__image"><img class="image"
                                                              src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"
                                                              alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image"
+            <div class="custom-slider__slide split-view__image"><img class="image"
                                                              src="../../assets/images/images-by-nastya/sec-3-man.svg"
                                                              alt=""></div>
           </div>
-        </div>
       </div>
     </div>
 
