--- a/src/app/main-page/activities-section/activities-section.component.html
+++ b/src/app/main-page/activities-section/activities-section.component.html
@@ -5,14 +5,14 @@
       совокупности</h3>
 
     <div class="activities__list">
-      <div class="activity">Хареография</div>
-      <div class="activity">Актерское мастерство</div>
-      <div class="activity">Вокальное исполнение</div>
-      <div class="activity">Юмор</div>
-      <div class="activity">Сценарное искусство</div>
-      <div class="activity">Сценография</div>
-      <div class="activity">Оригинальный жанр</div>
-      <div class="activity">И многое другое</div>
+      <div class="activity activity-1">Хареография</div>
+      <div class="activity activity-2">Актерское мастерство</div>
+      <div class="activity activity-3">Вокальное исполнение</div>
+      <div class="activity activity-4">Юмор</div>
+      <div class="activity activity-5">Сценарное искусство</div>
+      <div class="activity activity-6">Сценография</div>
+      <div class="activity activity-7">Оригинальный жанр</div>
+      <div class="activity activity-8">И многое другое</div>
     </div>
   </div>
 
