First version of members-page implemented

--- a/src/app/master/header/header.component.html
+++ b/src/app/master/header/header.component.html
@@ -12,7 +12,7 @@
       <div class="nav-item"><a routerLink="events" class="nav-link">Афиша</a></div>
 <!--      <div class="nav-item"><a routerLink="gallery" class="nav-link">Галерея</a></div>-->
 <!--      <div class="nav-item"><a routerLink="portfolio" class="nav-link">Портфолио</a></div>-->
-<!--      <div class="nav-item"><a routerLink="members" class="nav-link">Участники</a></div>-->
+      <div class="nav-item"><a routerLink="members" class="nav-link">Участники</a></div>
       <div class="nav-item"><a routerLink="contacts" class="nav-link">Контакты</a></div>
     </div>
   </div>
