--- a/src/app/events-page/events-page.component.html
+++ b/src/app/events-page/events-page.component.html
@@ -1,2 +1,15 @@
-<h1 style="text-align: center; margin-top: 150px;">Здесь будет афиша</h1>
-<div style="text-align: center; color: gray; font-size: 10px;margin-bottom: 250px;">(заглушка)</div>
+<!--<h1 style="text-align: center; margin-top: 150px;">Здесь будет афиша</h1>-->
+<!--<div style="text-align: center; color: gray; font-size: 10px;margin-bottom: 250px;">(заглушка)</div>-->
+<h1 class="page-header">Афиша</h1>
+
+<section class="events-container container">
+
+  <div class="" *ngIf="eventService.getEvents().length < 2; then loading; else content"></div>
+  <ng-template #loading>
+    <app-loading></app-loading>
+  </ng-template>
+  <ng-template #content>
+    <app-event-view *ngFor="let event of eventService.getEvents()" [event]="event"></app-event-view>
+    <app-join-us [displayHint]="true"></app-join-us>
+  </ng-template>
+</section>
