--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -27,10 +27,4 @@
 <app-final-slogan-section
   [scrollCtrl]="scrollCtrl"></app-final-slogan-section>
 
-<section class="join-us-section">
-  <h3 class="join-us__label">Хочешь к нам?</h3>
-  <div class="join-us__link-container">
-    <a href="" class="join-us__how-to-become-member-link">Как стать участником коллектива</a>
-    <a routerLink="events" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
-  </div>
-</section>
+<app-join-us [displayHint]="true"></app-join-us>
