--- a/src/app/main-page/children-plays-section/children-plays-section.component.css
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.css
@@ -8,11 +8,11 @@
   align-items: center;
 }
 
-.children-plays__title {
-  background-color: var(--red);
-  color: var(--light-blue);
-  padding: 10px 20px;
-}
+/*.children-plays__title {*/
+/*  background-color: var(--red);*/
+/*  color: var(--light-blue);*/
+/*  padding: 10px 20px;*/
+/*}*/
 
 .children-plays__years {
 }
