--- a/src/app/main-page/children-plays-section/children-plays-section.component.html
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.html
@@ -1,7 +1,7 @@
 <section class="children-plays-section">
 
   <div class="container">
-    <h3 class="children-plays__title">Каждый год готовим и показываем детские новогодние спектакли</h3>
+    <h2 class="red-title" style="margin-bottom: 32px">Каждый год готовим и показываем детские новогодние спектакли</h2>
     <div class="children-plays__years years">
       <div class="years__top-line"></div>
       <div class="years__container">
