--- a/src/app/main-page/you-can-section/you-can-section.component.css
+++ b/src/app/main-page/you-can-section/you-can-section.component.css
@@ -10,12 +10,7 @@
   position: relative;
 }
 
-.you-can__title {
-  padding: 16px;
-  background-color: var(--red);
-  color: var(--light-blue);
-  text-align: center;
-}
+
 
 .you-can__split-view {
   display: flex;
@@ -47,7 +42,7 @@
   z-index: 1;
 }
 .split-view__image {
-
+  /*height: 100%;*/
 }
 
 /* Дизайним слайдер */
@@ -61,6 +56,7 @@
   position: absolute;
   pointer-events: none;
   transition-property: opacity, left;
+  height: 100%;
 }
 .custom-slider__slide.prev {
   left: -100px;
