--- a/src/app/main-page/you-can-section/you-can-section.component.html
+++ b/src/app/main-page/you-can-section/you-can-section.component.html
@@ -2,7 +2,7 @@
 
   <div class="you-can__body">
 
-    <h3 class="you-can__title">У нас можно</h3>
+    <h2 class="red-title">У нас можно</h2>
     <div class="you-can__split-view">
       <ul class="split-view__text-side">
         <li class="split-view__parah">Заниматься актерским мастерством и режиссурой</li>
@@ -14,42 +14,39 @@
         <li class="split-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
       </ul>
       <div class="split-view__image-side">
-<!--        <div class="swiper-container">-->
-<!--                    <div class="swiper-wrapper">-->
-<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
-<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
-<!--                                                                       alt=""></div>-->
-<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
-<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"-->
-<!--                                                                       alt=""></div>-->
-<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
-<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
-<!--                                                                       alt=""></div>-->
-<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
-<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"-->
-<!--                                                                       alt=""></div>-->
-<!--                      <div class="swiper-slide split-view__image"><img class="image"-->
-<!--                                                                       src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
-<!--                                                                       alt=""></div>-->
-<!--                    </div>-->
-<!--        </div>-->
-          <div class="custom-slider">
-            <div class="custom-slider__slide split-view__image"><img class="image"
-                                                             src="../../assets/images/images-by-nastya/sec-3-man.svg"
-                                                             alt=""></div>
-            <div class="custom-slider__slide split-view__image"><img class="image"
-                                                             src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"
-                                                             alt=""></div>
-            <div class="custom-slider__slide split-view__image"><img class="image"
-                                                             src="../../assets/images/images-by-nastya/sec-3-man.svg"
-                                                             alt=""></div>
-            <div class="custom-slider__slide split-view__image"><img class="image"
-                                                             src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"
-                                                             alt=""></div>
-            <div class="custom-slider__slide split-view__image"><img class="image"
-                                                             src="../../assets/images/images-by-nastya/sec-3-man.svg"
-                                                             alt=""></div>
-          </div>
+        <div class="custom-slider">
+
+          <!--            <div class="custom-slider__slide split-view__image"><img class="image"-->
+          <!--                                                             src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"-->
+          <!--                                                             alt=""></div>-->
+          <!--            <div class="custom-slider__slide split-view__image"><img class="image"-->
+          <!--                                                             src="../../assets/images/images-by-nastya/sec-3-orator.jpg"-->
+          <!--                                                             alt=""></div>-->
+          <!--            <div class="custom-slider__slide split-view__image"><img class="image"-->
+          <!--                                                             src="../../assets/images/images-by-nastya/sec-3-festival.png"-->
+          <!--                                                             alt=""></div>-->
+          <!--            <div class="custom-slider__slide split-view__image"><img class="image"-->
+          <!--                                                             src="../../assets/images/images-by-nastya/sec-3-man.svg"-->
+          <!--                                                             alt=""></div>-->
+          <!--            <div class="custom-slider__slide split-view__image"><img class="image"-->
+          <!--                                                             src="../../assets/images/images-by-nastya/sec-3-festival.png"-->
+          <!--                                                             alt=""></div>-->
+          <img class="custom-slider__slide split-view__image image"
+               src="../../assets/images/images-by-nastya/sec-3-parah-img.svg"
+               alt="">
+          <img class="custom-slider__slide split-view__image image image__object-fit_cover"
+               src="../../assets/images/images-by-nastya/sec-3-orator.jpg"
+               alt="">
+          <img class="custom-slider__slide split-view__image image"
+               src="../../assets/images/images-by-nastya/sec-3-festival.svg"
+               alt="">
+          <img class="custom-slider__slide split-view__image image"
+               src="../../assets/images/images-by-nastya/sec-3-man.svg"
+               alt="">
+          <img class="custom-slider__slide split-view__image image"
+               src="../../assets/images/images-by-nastya/sec-3-festival.svg"
+               alt="">
+        </div>
       </div>
     </div>
 
