--- a/src/app/main-page/children-plays-section/children-plays-section.component.html
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.html
@@ -2,10 +2,12 @@
 
   <div class="container">
     <h2 class="red-title" style="margin-bottom: 32px">Каждый год готовим и показываем детские новогодние спектакли</h2>
+
+    <!-- Add Pagination -->
+    <!--      <div class="swiper-pagination"></div>-->
     <div class="children-plays__years years">
       <div class="years__top-line"></div>
       <div class="years__container">
-        <div class="years__year-blue-selection"></div>
         <div class="years__year">2012</div>
         <div class="years__year">2013</div>
         <div class="years__year">2014</div>
@@ -16,6 +18,7 @@
         <div class="years__year">2019</div>
       </div>
     </div>
+
     <div class="swiper-container children-plays__swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide children-plays__slide"><img class="children-plays__image image"
@@ -36,15 +39,13 @@
         <div class="swiper-slide children-plays__slide"><img class="children-plays__image image"
                                                              src="../../assets/images/images-by-nastya/sec-5-2014.jpg"
                                                              alt=""></div>
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 1 <div class="box"></div></div>-->
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 2 <div class="box"></div></div>-->
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 3 <div class="box"></div></div>-->
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 4 <div class="box"></div></div>-->
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 5 <div class="box"></div></div>-->
-        <!--        <div class="swiper-slide children-plays__slide">Слайд 6 <div class="box"></div></div>-->
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image"
+                                                             src="../../assets/images/images-by-nastya/sec-5-2014.jpg"
+                                                             alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image"
+                                                             src="../../assets/images/images-by-nastya/sec-5-2014.jpg"
+                                                             alt=""></div>
       </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
     </div>
 
   </div>
