mobile optimization to many components. - Footer restructured - Images added to sec-2 on the main page

--- a/src/app/main-page/activities-section/activities-section.component.css
+++ b/src/app/main-page/activities-section/activities-section.component.css
@@ -8,7 +8,7 @@
   padding: 16px;
 }
 .activities__text {
-  font-size: 35px;
+
 }
 .activities__list {
   display: flex;
@@ -18,7 +18,7 @@
 }
 
 .activity {
-  font-size: 24px;
+  /*font-size: 24px;*/
   padding: 0 24px;
   margin-bottom: 8px;
 }
