--- a/src/app/main-page/children-plays-section/children-plays-section.component.css
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.css
@@ -127,3 +127,9 @@
 .children-play-name{
   text-align: center;
 }
+
+@media all and (max-width: 768px) {
+  .years__container {
+    display: none;
+  }
+}
