--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="intro__body">
       <img class="intro__image" src="../../assets/images/text-red-logo.png" alt="">
-      <h3 class="intro__greeting">Добро пожаловать</h3>
+      <h3 class="intro__greeting"></h3>
     </div>
     <img src="../../assets/images/images-by-nastya/" alt="">
   </div>
