--- a/src/app/main-page/our-plays-section/our-plays-section.component.html
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.html
@@ -1,6 +1,6 @@
 <section class="our-plays-section">
   <div class="our-plays__container">
-    <h3 class="our-plays__title">Наши репертуарные спектакли</h3>
+    <h3 class="section-title our-plays__title">Наши репертуарные спектакли</h3>
     <div class="swiper-container  our-plays__swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
@@ -11,12 +11,6 @@
                                                         alt=""></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-petlya.jpg"
-                                                        alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
-                                                        src="../../assets/images/images-by-nastya/sec-4-urok.jpg"
-                                                        alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
-                                                        src="../../assets/images/images-by-nastya/sec-4-orakul.jpg"
                                                         alt=""></div>
       </div>
       <!-- Add Pagination -->
