--- a/src/app/main-page/you-can-section/you-can-section.component.html
+++ b/src/app/main-page/you-can-section/you-can-section.component.html
@@ -2,7 +2,7 @@
 
   <div class="you-can__body">
 
-    <h2 class="red-title">У нас можно</h2>
+    <h2 class="section-title red-title">У нас можно</h2>
     <div class="you-can__split-view">
       <ul class="split-view__text-side">
         <li class="split-view__parah">Заниматься актерским мастерством и режиссурой</li>
