--- a/src/app/master/footer/footer.component.html
+++ b/src/app/master/footer/footer.component.html
@@ -1,12 +1,15 @@
 <footer>
   <div class="container">
+
     <div class="for-cooperation">
       <div class="for-cooperation__1 for-cooperation__text">По вопросам сотрудничества:</div>
-      <div class="for-cooperation__2 for-cooperation__text">8 965 381-82-31</div>
-      <div class="for-cooperation__3 for-cooperation__text">tm-mospolytech@gmail.com</div>
+      <div class="for-cooperation__3 for-cooperation__text"><a href="mailto:okmr@mospolytech.ru">okmr@mospolytech.ru</a></div>
     </div>
+
+<!--    <div style="width: 60px"></div>-->
+
     <div class="social">
-      <div>Мы в социальных сетях:</div>
+      <div style="color: var(--blacklike)">Мы в социальных сетях:</div>
       <div class="social__link-container">
         <a href="https://vk.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-vk.png" alt="" class="social__link-image"></a>
         <a href="https://www.instagram.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-instagram.png" alt="" class="social__link-image"></a>
@@ -14,4 +17,7 @@
       </div>
     </div>
   </div>
+  <span class="copyright">
+    Сайт создали студенты Московского Политеха <br class="copyright_br"> <a href="https://vk.com/megas781" target="_blank">Калачев Глеб</a> и <a href="https://vk.com/nastyakudryashova20" target="_blank">Анастасия Кудряшова</a>
+  </span>
 </footer>
