--- a/src/app/main-page/activities-section/activities-section.component.html
+++ b/src/app/main-page/activities-section/activities-section.component.html
@@ -1,7 +1,7 @@
 <section class="activities-section">
 
   <div class="container">
-    <h3 class="activities__text">Коллектив собрал в себе разносторонних людей,<br>которым интересно творчество в его
+    <h3 class="section-title">Коллектив собрал в себе разносторонних людей,<br>которым интересно творчество в его
       совокупности</h3>
 
     <div class="activities__list">
@@ -20,29 +20,21 @@
     <div class="swiper-container activities-swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-5.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-6.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-7.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image"
-                                                      src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt="">
-        </div>
+                                                      src="../../assets/images/images-by-nastya/sec-2-img-8.jpg" alt=""></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
