--- a/src/app/main-page/children-plays-section/children-plays-section.component.html
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.html
@@ -1,7 +1,7 @@
 <section class="children-plays-section">
 
   <div class="container">
-    <h2 class="red-title" style="margin-bottom: 32px">Каждый год готовим и показываем детские новогодние спектакли</h2>
+    <h2 class="section-title red-title" style="margin-bottom: 32px">Каждый год готовим и показываем детские новогодние спектакли</h2>
 
     <!-- Add Pagination -->
     <!--      <div class="swiper-pagination"></div>-->
@@ -10,7 +10,19 @@
       <div class="years__container">
         <div class="years__year" *ngFor="let play of plays">{{play.year}}</div>
       </div>
+      <div class="swiper-pagination">
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+        <span class="swiper-pagination"></span>
+      </div>
     </div>
+
+
 
     <div class="swiper-container children-plays__swiper">
       <div class="swiper-wrapper">
