--- a/src/app/master/footer/footer.component.css
+++ b/src/app/master/footer/footer.component.css
@@ -1,24 +1,34 @@
 footer {
   background: var(--purple);
   color: var(--light-blue);
-  padding: 20px 0;
+  padding: 20px 3px 0;
+}
+footer a {
+  color: white;
 }
 footer .container {
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
+  justify-content: center;
   align-items: center;
 }
 
 .for-cooperation {
-
+  padding: 0 54px;
 }
 .for-cooperation__text {
   font-size: 16px;
+}
+.footer-link {
+  color: white;
 }
 
 .social {
   display: flex;
   align-items: center;
+  background: white;
+  border-radius: 24px;
+  padding: 4px 24px;
 }
 .social__link-container {
   /*margin-left: 16px;*/
@@ -27,6 +37,29 @@ footer .container {
 .social__link {
   margin-left: 8px;
   display: block;
+  position: relative;
+  top: 2px;
+}
+.social__link-image {
+  height: 28px;
+  width: 28px;
+}
+
+.copyright {
+  opacity: 0.5;
+  display: block;
+  text-align: center;
+  padding: 8px 32px 4px;
+
+
+  font-size: 11px;
+  white-space: nowrap;
+}
+.copyright a {
+
+}
+.copyright_br {
+  display: none;
 }
 
 @media (max-width: 768px) {
@@ -35,5 +68,11 @@ footer .container {
   }
   .social {
     margin-top: 16px;
+  }
+  .copyright_br {
+    display: inline;
+  }
+  .for-cooperation {
+    text-align: center;
   }
 }
