--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,84 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import "dinpro.css";*/
 @import "../assets/fonts/Gilroy/stylesheet.css";
-:root {
-  --red: #BF5B5F;
-  --light-blue: #E4F3FF;
-  --light-purple: #FECFFE;
-  --purple: #483296;
-  --blue: #006BF6;
-  --blacklike: #312f2f;
-}
-body {
-  margin: 0;
-  font-family: "Gilroy", sans-serif;
-  /*font-family: "DIN Pro", sans-serif;*/
-  font-weight: 300;
-  font-size: 18px;
-  overflow-x: hidden;
-  color: var(--blacklike);
-}
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 400;
-}
-
-.page-header {
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 32px;
-}
-.page-subheader {
-  text-align: center;
-  font-size: 26px;
-  align-self: center;
-}
-.red-title {
-  padding: 16px 32px;
-  background-color: var(--red);
-  color: var(--light-blue);
-  text-align: center;
-}
-.gray-title {
-  padding: 16px;
-  background-color: #5b8282;
-  color: white;
-  text-align: center;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1100px;
-  padding: 0 16px;
-}
-
-a:hover {
-  /*cursor: pointer !important;*/
-}
-
-.text-centering {
-  text-align: center;
-}
-.flex-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.image {
-  max-width: 100%;
-  max-height: 100%;
-  display: inline-block;
-}
-.image__object-fit_cover {
-  object-fit: cover;
-}
-
-.decoration-silhouette {
-  position: absolute;
-  /*max-width: 120px;*/
-  /*max-height: 120px;*/
-  user-select: none;
-  pointer-events: none;
-  display: block;
-}
-
-
+@import "style.general.css";
+@import "style.tablet.css";
+@import "style.mobile.css";
