--- a/src/app/events-page/event-view/event-view.component.html
+++ b/src/app/events-page/event-view/event-view.component.html
@@ -1,5 +1,7 @@
 <div class="event-view">
-  <img src="{{event.photoUrl}}" alt="" class="event-view__image">
+  <div class="event-view__image-container">
+    <img src="{{event.photoUrl}}" alt="" class="event-view__image">
+  </div>
   <div class="event-view__text-container">
     <h3 class="event-view__title">{{event.title}}</h3>
     <p class="event-view__text">{{event.text}}</p>
