--- a/src/app/members-page/members-page.component.html
+++ b/src/app/members-page/members-page.component.html
@@ -9,7 +9,7 @@
 
   <ng-template #content>
     <section class="members-container">
-    <app-member-view [scrollCtrl]="scrollCtrl" *ngFor="let member of memberService.getMembers()"
+    <app-member-view class="member-container__member" [scrollCtrl]="scrollCtrl" *ngFor="let member of memberService.getMembers()"
                      [member]="member"></app-member-view>
     </section>
     <app-join-us></app-join-us>
