--- a/src/style/style.mobile.css
+++ b/src/style/style.mobile.css
@@ -1,4 +1,7 @@
 @media all and (max-width: 480px){
+  body {
+    font-size: 16px;
+  }
   .section-title {
     font-size: 20px;
     margin-top: 8px;
