--- a/src/app/main-page/awards-section/awards-section.component.css
+++ b/src/app/main-page/awards-section/awards-section.component.css
@@ -2,22 +2,23 @@
 .awards-section {
   background-color: var(--purple);
   color: var(--light-blue);
-  min-height: 720px;
+  /*min-height: 720px;*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 16px;
 }
 .awards__body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   max-width: 520px;
-  margin: 0 auto;
+  margin: 60px auto;
   position: relative;
 
-  padding-right: 16px;
-  padding-bottom: 16px;
+  /*padding-right: 16px;*/
+  /*padding-bottom: 16px;*/
 
   display: flex;
   align-items: center;
@@ -27,22 +28,27 @@
 .awards__title {
   font-size: 30px;
   text-align: center;
-  position: absolute;
+  /*position: absolute;*/
   margin: 0 auto;
-  top: -28px;
+  color: white !important;
+  /*top: -28px;*/
 }
 
 .awards__cup-background {
-  height: 680px;
+  /*height: 680px;*/
+  height: calc(100% + 100px);
   position: absolute;
   pointer-events: none;
   user-select: none;
+  /*display: none;*/
 }
 
 .awards__list {
   list-style-type: '— ';
   position: relative;
   z-index: 228;
+  padding: 0;
+  padding-left: 16px;
 }
 .awards__award {
   font-size: 18px;
@@ -70,4 +76,13 @@
   bottom: -180px;
   right: -270px;
   transform: scale(-1, 1);
+}
+
+@media all and (max-width: 768px) {
+  .awards__body {
+
+  }
+  .awards__award {
+    font-size: 14px;
+  }
 }
