--- a/src/app/main-page/our-plays-section/our-plays-section.component.css
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.css
@@ -34,10 +34,10 @@
   /*overflow-x: hidden !important;*/
 }
 .our-plays__slide {
-  transition: 0.3s ease-out;
+  /*transition: 0.3s ease-out;*/
 }
 .our-plays__slide.swiper-slide-active {
-  transform: scale(1.1);
+  /*transform: scale(1.1);*/
   position: relative;
   z-index: 228;
   /*margin: 0 32px;*/
@@ -73,6 +73,6 @@
     padding: 64px 0;
   }
   .our-plays__slide.swiper-slide-active {
-    transform: scale(1.3);
+    /*transform: scale(1.3);*/
   }
 }
