--- a/src/app/main-page/our-plays-section/our-plays-section.component.html
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.html
@@ -2,7 +2,14 @@
   <div class="our-plays__container">
     <h3 class="section-title our-plays__title">Наши репертуарные спектакли</h3>
     <div class="swiper-container  our-plays__swiper">
+
       <div class="swiper-wrapper">
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
+                                                        src="../../assets/images/images-by-nastya/sec-4-family-stories.jpg"
+                                                        alt=""></div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
+                                                        src="../../assets/images/images-by-nastya/sec-4-svetloe-budusheye.jpg"
+                                                        alt=""></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-urok.jpg"
                                                         alt=""></div>
