--- a/src/app/members-page/members-page.component.html
+++ b/src/app/members-page/members-page.component.html
@@ -1,7 +1,7 @@
 <h1 class="page-header">Участники Творческой Мастерской</h1>
 
 
-  <div class="" *ngIf="memberService.getMembers().length < 2; then loading; else content"></div>
+  <div class="" *ngIf="memberService.peopleArray.length < 2; then loading; else content"></div>
 
   <ng-template #loading>
     <app-loading></app-loading>
@@ -9,7 +9,7 @@
 
   <ng-template #content>
     <section class="members-container">
-    <app-member-view class="member-container__member" [scrollCtrl]="scrollCtrl" *ngFor="let member of memberService.getMembers()"
+    <app-member-view class="member-container__member" [scrollCtrl]="scrollCtrl" *ngFor="let member of memberService.peopleArray"
                      [member]="member"></app-member-view>
     </section>
     <app-join-us></app-join-us>
