--- a/src/style/style.mobile.css
+++ b/src/style/style.mobile.css
@@ -7,4 +7,10 @@
     margin-top: 8px;
     margin-bottom: 8px;
   }
+  .page-header {
+    font-size: 24px;
+  }
+  .section-title {
+    font-size: 22px;
+  }
 }
