--- a/src/app/main-page/our-plays-section/our-plays-section.component.html
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.html
@@ -1,12 +1,12 @@
 <section class="our-plays-section">
-  <div class="our-plays__container">
+<!--  <div class="our-plays__container">-->
     <h3 class="section-title our-plays__title">Наши репертуарные спектакли</h3>
     <div class="swiper-container  our-plays__swiper">
 
       <div class="swiper-wrapper">
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
-                                                        src="../../assets/images/images-by-nastya/sec-4-family-stories.jpg"
-                                                        alt=""></div>
+        <div class="swiper-slide our-plays__slide">
+          <img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-family-stories.jpg" alt="">
+        </div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-svetloe-budusheye.jpg"
                                                         alt=""></div>
@@ -26,5 +26,5 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
     </div>
-  </div>
+<!--  </div>-->
 </section>
