links in join-us fixed

--- a/src/app/contacts-page/contacts-page.component.html
+++ b/src/app/contacts-page/contacts-page.component.html
@@ -5,6 +5,7 @@
 
   <div class="lenochka-container">
     <h3>Ты студент/абитуриент?<br>
+      Хочешь узнать, как попасть в коллектив?<br>
       Есть вопросы о Творческой Мастерской?<br>
       Спроси у Леночки!</h3>
     <div class="contact">
